# gh-search

./: README.md  pyproject.toml
src/gh_search/: __init__.py  cache.py  gh_search.py
